pl 27.om-je-te-helpen-met-je-ps-spul.jcn1
	- embedded slurs:
	  * bf: placements
	  * added \embeddedtex
	  * postscript is default
	  * fixed \embeddedps
	  * fixed mf: draw_slur
	  * postscript macro: draw_slur

pl 27
	- -t/--test switch for experimental stuff.
	- bf: debian optimize is not with 'z'
	- mf: naming feta fonts are now called feta16, feta-beams16, etc.
	- feta: ledgerline
	- lily adjustments for new and elegant ledger line
	- bf: mf-source path.

pl 26.jcn1
	- bf: numerals
	- sleur.ly
	- embedded slur testing 
	- bf + patch: make-patch release.py / VERSION


********
oct 26
pl 26
	- bf: \transpose
	- feta: numerals 0 - 9, rewrote flags.

	

********
oct 22

pl 25 	
	- variable stemlength
	- feta: 32nd, 64th flags
	- font.ly
	- dist & tarball made in out/
	- rewrote release.sh in python
	- notehead/stem attachment better.
	- more Stem cleanage
	- related Beam cleanage
	- started numeral font (JCN)
	- bf: whole rest outside staff.

*********
oct 20
pl 24
	- internationalization preps (FP)
	- rewrote make-patch in python
	- BUGS: added another flex/libio crash explanation
	- feta: flags


********
pl 23
	- feta changes: 1/4 rest, flat, bf 8-128 rest
	- bf: cadenza
	- bf: scripts
	- bf: rest-collision
	- bf: meter placement
	- junked cpgento.sh

*********

pl 22
	- bf: lyric 's- Zondags
	- bf: colliding accidentals: renamed translate(Real,Axis) to translate_axis()
	- renaming of scripts
	- strings with escaped characters.
	- bf "string_with_\"_embedded"
	- bf: mf/Makefile
	- feta changes (trill, organ pedals)
	- updated mf-to-table for new feta conventions
	- changed header format to something sensible.
	- moved staff to centerline == 0;

********

pl 21
	- shrinking uses more energy  than stretching
	- check IO error on writing (disk full?)


*********

oct 8
pl 20
	- don't swallow non lyric-stuff in lyrics
	- x-position of Stem
	- more feta changes
	- move scripts to right
	- genheader.py replaces genheader.perl

pl 19.jcn2
	- bf's mi2mu: