@@ -30,6 +30,7 @@ in hints what might be wrong.  This problem has only been identified
 with libc-5.3 and libc-5.4 platforms, so you might try upgrading to
 6.0, ie. GNU libc-2.
 
+
 [Linux Intel]
 
 A problem resembling the previous: usage of libg++.2.8.x with the
