@@ -18,7 +18,7 @@
 \composer{Tarquinio Merula (1594/95-1665)}
 %\instrument{M\"a\ss ig} % heu
 %#%\tempo{M\"a\ss ig}
-\maketit
+\makelilytitle
 \input{gallina.out}
 
 
