@@ -1,9 +1,8 @@
 \documentclass{article}         %UGH
 \usepackage{a4}
-\oddsidemargin-1in\advance\oddsidemargin7.5mm
+\advance\oddsidemargin-15mm
 \evensidemargin\oddsidemargin
-\hsize210mm\vsize297mm % so what does a4 do, anyway?
-\textwidth\hsize\advance\textwidth-15mm
+\advance\textwidth30mm
 \begin{document}
 \input lilyponddefs
 \musixsixteendefs
@@ -16,6 +15,6 @@
 % \tempo{Moderato}
 % \metron{4=120}
 \instrument{Menuetto I} % heu
-\maketit
+\makelilytitle
 \input scsii-menuetto.out
 \end{document}
