@@ -1,11 +1,12 @@
 \documentclass{article}         %UGH
 \usepackage{a4}
-\oddsidemargin-1in\advance\oddsidemargin7.5mm
+
+%
+% UGH UGH
+\advance\oddsidemargin-25mm
 \evensidemargin\oddsidemargin
-\hsize210mm\vsize297mm % so what does a4 do, anyway?
-\textwidth\hsize\advance\textwidth-15mm
-\topmargin-1in\advance\topmargin10mm
-\textheight\vsize\advance\textheight-35mm
+\advance\textwidth30mm
+\addtolength{\textheight}{20mm}
 \pagestyle{empty}
 \begin{document}
 \input lilyponddefs
@@ -16,7 +17,7 @@
 \composer{Franz Schubert (1797-1828)}
 \instrument{M\"a\ss ig} % heu
 %#%\tempo{M\"a\ss ig}
-\maketit
+\makelilytitle
 \input{standchen-20.out}
 %\input lelie.tex
 \end{document}
