@@ -33,8 +33,20 @@ Staff_symbol::do_print() const
 Molecule*
 Staff_symbol::brew_molecule_p() const
 {
-  Atom a  = paper()->lookup_l ()->linestaff (no_lines_i_, paper ()->interline_f(), width ().length ());
-  return new Molecule (a);
+  Paper_def * p = paper();
+  Atom rule  = p->lookup_l ()->rule_symbol (p->get_var ("rule_thickness"), 
+					    width ().length ());
+  Real inter = p->interline_f ();
+  Real height = (no_lines_i_-1) * inter/2;
+  Molecule * m = new Molecule;
+  for (int i=0; i < no_lines_i_; i++)
+    {
+      Atom a (rule);
+      a.translate_axis (height - i * inter, Y_AXIS);
+      m->add (a);
+    }
+
+  return m;
 }
 
 Real
