@@ -14,8 +14,8 @@ Author: hanwen@stack.nl (Han-Wen Nienhuys)
 	jan@digicash.com (Jan Nieuwenhuizen)
 Maintained-by: hanwen@stack.nl (Han-Wen Nienhuys)
 Primary-site: sunsite.unc.edu /pub/Linux/apps
-	430k lilypond-@TOPLEVEL_VERSION@.tar.gz 
+	440k lilypond-@TOPLEVEL_VERSION@.tar.gz 
 Original-site: pcnov095.win.tue.nl /pub/lilypond/
-	430k lilypond-@TOPLEVEL_VERSION@.tar.gz 
+	440k lilypond-@TOPLEVEL_VERSION@.tar.gz 
 Copying-policy: GPL
 End
