@@ -11,12 +11,9 @@
         \font\vetfont=feta-beams20
         \font\fetanummer=feta-nummer10
 }
-
-% \def\fetdef#1#2{\def#1{\fetchar{#2}}}
-% ugh, linewidth, ugh, tablexx.ly balldims not used!
-\def\fetdef#1#2{%
+\def\fetdef#1#2{\def#1{%
         % what the fuck is this?
-        \def#1{\lower.3884\staffrulethickness
+        %\lower.3884\staffrulethickness
         \hbox{\fetchar{#2}}}}
 
 \def\fetchar#1{\fontentja\char#1}
@@ -67,73 +64,73 @@
 /thin 0.2 def
 /thick thin 5 mul def
 /draw_slur { 
-	% up or down?
+        % up or down?
         /dir exch def
-%	
-%	for mo*tex shift
-%	exch
-%	1 copy /dx exch def
-%	exch
+%       
+%       for mo*tex shift
+%       exch
+%       1 copy /dx exch def
+%       exch
 %
-	% calc angle alpha
-	2 copy exch atan /alpha exch def
-	% calc len(gth)
-	2 exp exch 2 exp add sqrt /len exch def
+        % calc angle alpha
+        2 copy exch atan /alpha exch def
+        % calc len(gth)
+        2 exp exch 2 exp add sqrt /len exch def
 %
-	% add and calc z2, z3
-	len xbow mul
-	len ybow mul dir mul
-	1 xbow sub len mul
-	len ybow mul dir mul
-%	
-	% add z4, z1
-	len 0 
-	0 0
+        % add and calc z2, z3
+        len xbow mul
+        len ybow mul dir mul
+        1 xbow sub len mul
+        len ybow mul dir mul
+%       
+        % add z4, z1
+        len 0 
+        0 0
 %
-	% add and calc z5..z8 
-	8 copy
-	thin dir mul sub
-	8 2 roll
-	thin dir mul sub
-	8 2 roll
-	thick dir mul sub
-	8 2 roll
-	thick dir mul sub
+        % add and calc z5..z8 
+        8 copy
+        thin dir mul sub
+        8 2 roll
+        thin dir mul sub
+        8 2 roll
+        thick dir mul sub
+        8 2 roll
+        thick dir mul sub
 %
-	% reverse order, must be cycle
-	8 6 roll
-	6 2 roll
-	4 2 roll
-	8 6 roll
-%	
-	% set z1..z4
-	16 8 roll
+        % reverse order, must be cycle
+        8 6 roll
+        6 2 roll
+        4 2 roll
+        8 6 roll
+%       
+        % set z1..z4
+        16 8 roll
 %
-	alpha rotate
-%	silly mo*tex convention
-%	dx 2 div -1 mul 0 translate
-	% draw z1..z4
-	moveto curveto
-	% draw z5..z8
-	lineto curveto
-	% cycle
-	0 0 lineto
-	fill
+        alpha rotate
+%       silly mo*tex convention
+%       dx 2 div -1 mul 0 translate
+        % draw z1..z4
+        moveto curveto
+        % draw z5..z8
+        lineto curveto
+        % cycle
+        0 0 lineto
+        fill
 } def }
 }
 
 \def\embeddedtex#1{#1}
 \def\embeddedps#1{
-	\special{ps: @beginspecial @setspecial #1 @endspecial}       
+        \special{ps: @beginspecial @setspecial #1 @endspecial}       
 }
 \def\embeddedmf#1{
-	\edef\embedid{feta-sleur-\number\embedcount}
-	\immediate\openout\embedfile=\embedid.mf
-	\global\advance\embedcount by 1
-	\immediate\write\embedfile{#1}
-	\immediate\closeout\embedfile
-	\font\expandafter\embedid\expandafter=\embedid
-	\embedid\char0
+        \edef\embedid{feta-sleur-\number\embedcount}
+        \immediate\openout\embedfile=\embedid.mf
+        \global\advance\embedcount by 1
+        \immediate\write\embedfile{#1}
+        \immediate\closeout\embedfile
+        \font\expandafter\embedid\expandafter=\embedid
+        \embedid\char0
 }
 
 \def\notex{\def\embeddedtex##1{}}
@@ -141,9 +138,9 @@
 \def\nometafont{\def\embeddedmf##1{}}
 
 % dat heb je handig gedaan, lieverd!
-\nometafont
+%\nometafont
 \nopostscript
-%\notex
+\notex
 
 \def\EndLilyPondOutput{
         \storeembedcount
